<resources>
    <string name="app_name">Proyecto</string>
    <string name="action_settings">Settings</string>

    <string name="home_string">Home</string>
    <string name="animals_string">Animals</string>
    <string name="record_string">Record</string>
    <string name="studies_string">Studies</string>
    <string name="setting_string">Settings</string>
    <string name="action_save">Save</string>
    <string name="hello_world">Hello World</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="starred_string">Starred</string>
    <string name="inbox_string">Inbox</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <string-array name="language">
        <item>English</item>
        <item>Spanish</item>
    </string-array>

    <string-array name="am">
        <item>Ø</item>
        <item>S</item>
        <item>E</item>
    </string-array>
    <string-array name="stepd">
        <item>Ø</item>
        <item>O</item>
        <item>F</item>
        <item>C</item>
    </string-array>
    <string-array name="stepp">
        <item>Ø</item>
        <item>O</item>
        <item>F</item>
        <item>C</item>
    </string-array>
    <string-array name="coord">
        <item>Ø</item>
        <item>SOME</item>
        <item>MOST</item>
    </string-array>
    <string-array name="pp">
        <item>Ø</item>
        <item>I</item>
        <item>E</item>
        <item>R</item>
        <item>P</item>
    </string-array>
    <string-array name="ti">
        <item>SEVERE</item>
        <item>MILD</item>
        <item>NORMAL</item>
    </string-array>
    <string-array name="tail">
        <item>DOWN</item>
        <item>UP AND DOWN</item>
        <item>UP</item>
    </string-array>
    <string-array name="sexo">
        <item>F</item>
        <item>M</item>
    </string-array>
    <string-array name="sn">
        <item>S</item>
        <item>N</item>
    </string-array>
    <string name="code_string">Code</string>
    <string name="sex_string">Sex</string>
    <string name="experiment_string">Experiment</string>
    <string name="species_string">Species</string>
    <string name="strain_string">Strain</string>
    <string name="date__birth_string">Date Birth</string>
    <string name="surgery_date">Surgery Date</string>
    <string name="treatment_string">Treatment</string>
    <string name="injury_string">Injury Model</string>
    <string name="origin_string">Origin</string>
    <string name="transgenic_string">Trans.</string>
    <string name="header_code_string">CÓDIGOCODE</string>
    <string name="header_species_string">SPECIES</string>
    <string name="header_experiment_string">EXPERIMENT</string>
    <string name="header_birth_string">BIRTH</string>
    <string name="header_surgery_string">SURGERY</string>
    <string name="button_studies_string">Studies</string>
    <string name="button_delete_string">Delete</string>
    <string name="date_study_string">Date</string>
    <string name="hour_study_string">Hour</string>
    <string name="time_study_string">Time (pod)</string>
    <string name="researcher1_study">Researcher1</string>
    <string name="researcher2_study">Researcher2</string>
    <string name="test_type_string">Test type</string>
    <string name="comment_string">Comment</string>
    <string name="left_leg_string">LEFT LEG</string>
    <string name="right_leg_string">RIGHT LEG</string>
    <string name="score_study_string">Subscore</string>
    <string name="scorel_study_string">Score L / R</string>
    <string name="scorer_study_string">Score R</string>
    <string name="animal_add">Add animal</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_exit">Do you want to exit?</string>
    <string name="dialog_exit_animals">Animal data will be lost</string>
    <string name="dialog_warning">Warning</string>
    <string name="dialog_required_data">Missing required data</string>
    <string name="dialog_animal_record">Animal recorded correctly</string>
    <string name="animal_edit">Edit animal</string>
    <string name="dialog_animal_edit">Animal updated correctly</string>
    <string name="diagog_warning_edir">Confirm edit...</string>
    <string name="dialog_no_change">No change has been made</string>
    <string name="dialog_animal_edit_warning">Are you sure you want to modify this animal?</string>
    <string name="email_animal_tv_nane">Name</string>
    <string name="email_animal_et_nane">Name</string>
    <string name="email_animal_et_email">Email</string>
    <string name="email_animal_tv_email">Email</string>
    <string name="email_animal_tv_subject">Subject</string>
    <string name="email_animal_tv_text">Text</string>
    <string name="email_animal_summary">Name</string>
    <string name="email_animal_text">\"Dispatch animal data sheet: \"</string>
    <string name="dialog_not_wifi">Wi-Fi not connected</string>
    <string name="dialog_data_use">If you press YES, data plan will be used</string>
    <string name="animal_send_email">Send email</string>
    <string name="dialog_contact_email">Selected contact has no email</string>
    <string name="animals">Animals</string>
    <string name="header_date_string">DATE</string>
    <string name="header_time_string">HOUR</string>
    <string name="header_researcher_string">RESEARCHER</string>
    <string name="Animal_studies">Animal\'s studies</string>
    <string name="animal_study_add">Add study</string>
    <string name="dialog_exit_study">Study data will be lost</string>
    <string name="dialog_study_record">Study  recorded correctly</string>
    <string name="animal_study_edit">Edit study</string>
    <string name="dialog_study_edit_warning">Are you sure you want to modify this study?</string>
    <string name="study_animal_edit">Study updated correctly</string>
    <string name="dialog_video_delete">Delete video</string>
    <string name="dialog_video_deleted">Video deleted</string>
    <string name="dialog_video_delete_msg">Would you like to delete this video?</string>
    <string name="study_detail_edit">Edit study detail</string>
    <string name="home">Home</string>
    <string name="home_title">BAMOS: a recording application for BAsso MOuse Scale of locomotion in experimental models of Spinal Cord Injury.</string>
    <string name="language_string">Language</string>
    <string name="apply_string">Apply</string>
    <string name="animal_string">Animal</string>
    <string name="reset_language_string">If press YES,  the app will be reset in selected language</string>
    <string name="about_string">About</string>
    <string name="help_string">Help</string>
    <string name="accept_string">Accept</string>
    <string name="add_string">Add</string>
    <string name="send_string">Send</string>
    <string name="details_string">Details</string>
    <string name="send_email_string">Send Email</string>
    <string name="generate_pdf_string">Generate PDF</string>
    <string name="delete_video_string">Delete video</string>
    <string name="add_contact_string">Add contact</string>
    <string name="attach_video_string">Attach video</string>
    <string name="recording_string">Recording</string>
    <string name="video_recorded">The video has already been recorded</string>
    <string name="registry_correct_string">Registry inserted correctly</string>
    <string name="must_record_string">You must record the video before saving the study</string>
    <string name="study_saved_string">The study has already been saved</string>
    <string name="recording_lost_string">If you press YES, the recording will be lost and you will return to the animal selection screen</string>
    <string name="access_study_string">If you press YES, you will access the detail of the saved study</string>
    <string name="no_video_recorded_string">You have not recorded the video, pressing YES, you will go back to the animal selection menu</string>
    <string name="no_study_saved_string">You have not saved the study, by pressing YES, you will go back to the animal selection menu</string>
    <string name="return_animal_string">In case of pressing YES you will return to the animal selection screen</string>
    <string name="new_study_string">New study</string>
    <string name="study_correct_string">Are the new study data correct?</string>
    <string name="minutes_string">min</string>
    <string name="second_string">sec</string>
    <string name="stop_string">Stop</string>
    <string name="time_string">Duration</string>
    <string name="exit_confirm_string">Are you sure you want to exit?</string>
    <string name="duration_language_string">If press YES,  the app will be reset with selected duration in seconds</string>

</resources>
