<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".controlador.MainActivity">

    <item
        android:id="@+id/action_done"
        android:title="@string/accept_string"
        android:icon="@drawable/ic_done_white_36dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_back"
        android:title="@string/add_string"
        android:icon="@drawable/ic_arrow_back_white_36dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_help"
        android:title="@string/help_string"
        android:icon="@drawable/ic_help_white_24dp"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:title="@string/about_string"
        android:icon="@drawable/ic_help_white_24dp"
        app:showAsAction="never"/>
</menu>